Updated backend APIs
Released version 3.0.1 to npm registry

Updated frontend to make a call after successful auth0/google login to create a user in mongo datbase via our API/SDK for aquilacode

Updated some docker files to help debug on the ec2 and attach to the the docker containers so i can get on them and debug things
