# nest-app/src/app/users/users.controller.ts
@@ -19,34 +19,35 @@ export class UsersController {
 
   @UseGuards(JwtAuthGuard)
   @Get("/")
-  findAll(): Promise<User[]> {
+  usersFindAll(): Promise<User[]> {
     return this.usersService.findAll();
   }
 
   @UseGuards(JwtAuthGuard)
   @Get(":id")
-  findOne(@Param("id") id: string): Promise<User> {
+  usersFindOne(@Param("id") id: string): Promise<User> {
     return this.usersService.findOne(id);
   }
 
   @UseGuards(JwtAuthGuard)
   @Post("/")
-  createUser(@Body() createUserDto: CreateUserDto): Promise<User> {
-    return this.usersService.create(createUserDto);
+  async usersCreate(@Body() createUserDto: CreateUserDto): Promise<User> {
+    const user: User = await this.usersService.calcUserData(createUserDto);
+    return this.usersService.create(user);
   }
 
-  @UseGuards(JwtAuthGuard)
-  @Delete(":id")
-  deleteOne(@Param("id") id: string): Promise<User> {
-    return this.usersService.delete(id);
-  }
+  // @UseGuards(JwtAuthGuard)
+  // @Delete(":id")
+  // deleteOne(@Param("id") id: string): Promise<User> {
+  //   return this.usersService.delete(id);
+  // }
 
-  @UseGuards(JwtAuthGuard)
-  @Put(":id")
-  updateOne(
-    @Param("id") id: string,
-    @Body() updateUserDto: CreateUserDto,
-  ): Promise<User> {
-    return this.usersService.update(id, updateUserDto);
-  }
+  // @UseGuards(JwtAuthGuard)
+  // @Put(":id")
+  // updateOne(
+  //   @Param("id") id: string,
+  //   @Body() updateUserDto: CreateUserDto,
+  // ): Promise<User> {
+  //   return this.usersService.update(id, updateUserDto);
+  // }
 }
